[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/effects/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/laser_hit.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.768966, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.638978, 0.994318 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 94.39
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 5.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 2 )

[node name="LaserBeam" type="RayCast2D"]
enabled = true
cast_to = Vector2( 500, 0 )
collide_with_areas = true
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 0.0
default_color = Color( 0.682353, 0.415686, 0.278431, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.2
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="CollisionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.2
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="BeamParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.2
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
shape = SubResource( 7 )
[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
